--- a/mtm6201/prototype/index.html
+++ b/mtm6201/prototype/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -9,28 +10,43 @@
 	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
 
 </head>
+
 <body>
 	<div class="navbar">
-		<a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a> 
-		<a href="./sitepages/products.html"><i class="fa fa-fw fa-search"></i> Products </a> 
-		<a href="./sitepages/contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a> 
+		<a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
+		<a href="./sitepages/products.html"><i class="fa fa-fw fa-search"></i> Products </a>
+		<a href="./sitepages/contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
 		<a href="./sitepages/aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
 	</div>
 	<div class="container">
 		<div class="image-box">
-			<img src="./img/shop-logo.jpg" width="80%" height="80%"/>
+			<img src="./img/homeimg960.png" width="80%" height="80%" />
 		</div>
 		<div class="message-box">
 			<div class="header">Trupti Ice-Cream </div>
-			<img class="tagline" src="./img/tagline.jpg" width="150px" height="150px"/>
+			<img class="tagline" src="./img/tagline.jpg" width="150px" height="150px" />
 			<div class="shore-details">
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque tempore illo possimus corporis modi, laboriosam nulla facere exercitationem dolorum sunt ut, nostrum at a dicta explicabo rem dolores, ducimus suscipit.
-				Aspernatur, molestias dolorem ab in corporis eveniet numquam recusandae similique qui mollitia. Voluptatibus, reprehenderit quibusdam. Maxime enim asperiores at, totam illum sed et quibusdam reiciendis, natus deserunt facere, iusto ex!
-				Aliquid doloremque quod porro suscipit nulla, fugiat explicabo aperiam numquam error adipisci nihil asperiores! Est quo, doloremque ipsam odio doloribus nisi! Nihil aspernatur nam animi porro id, soluta et consequatur!
-				Doloribus voluptatem quos maxime. Et alias quae aperiam unde quaerat aut quos dolorem ad nam, facere quasi autem perferendis ullam tempore accusamus maxime dicta culpa itaque nesciunt consequuntur iusto suscipit?
-				Minus vero accusantium sed, dignissimos sapiente dicta debitis voluptatibus harum. Qui cumque veritatis repellendus officiis vero, deserunt saepe? Dicta, dolor. Est quisquam minima possimus quas ullam magnam eum voluptates cupiditate?
-				Doloribus maiores, facere pariatur assumenda tenetur eum esse officiis quisquam dolor molestias quam possimus omnis hic quia maxime aliquam similique consequatur est? Repellendus nesciunt nemo veniam quae aperiam et. Cum.
-				Eum iusto tempore officia, nemo et ea corporis impedit est voluptate fugit itaque ratione unde facilis perferendis explicabo optio, quam distinctio dolores obcaecati numquam ut eaque voluptas! Velit, nobis recusandae.
+				Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque tempore illo possimus corporis modi,
+				laboriosam nulla facere exercitationem dolorum sunt ut, nostrum at a dicta explicabo rem dolores,
+				ducimus suscipit.
+				Aspernatur, molestias dolorem ab in corporis eveniet numquam recusandae similique qui mollitia.
+				Voluptatibus, reprehenderit quibusdam. Maxime enim asperiores at, totam illum sed et quibusdam
+				reiciendis, natus deserunt facere, iusto ex!
+				Aliquid doloremque quod porro suscipit nulla, fugiat explicabo aperiam numquam error adipisci nihil
+				asperiores! Est quo, doloremque ipsam odio doloribus nisi! Nihil aspernatur nam animi porro id, soluta
+				et consequatur!
+				Doloribus voluptatem quos maxime. Et alias quae aperiam unde quaerat aut quos dolorem ad nam, facere
+				quasi autem perferendis ullam tempore accusamus maxime dicta culpa itaque nesciunt consequuntur iusto
+				suscipit?
+				Minus vero accusantium sed, dignissimos sapiente dicta debitis voluptatibus harum. Qui cumque veritatis
+				repellendus officiis vero, deserunt saepe? Dicta, dolor. Est quisquam minima possimus quas ullam magnam
+				eum voluptates cupiditate?
+				Doloribus maiores, facere pariatur assumenda tenetur eum esse officiis quisquam dolor molestias quam
+				possimus omnis hic quia maxime aliquam similique consequatur est? Repellendus nesciunt nemo veniam quae
+				aperiam et. Cum.
+				Eum iusto tempore officia, nemo et ea corporis impedit est voluptate fugit itaque ratione unde facilis
+				perferendis explicabo optio, quam distinctio dolores obcaecati numquam ut eaque voluptas! Velit, nobis
+				recusandae.
 
 				<button type="submit">Order Now</button>
 			</div>
@@ -40,16 +56,17 @@
 	<div class="footer">
 		<div style="text-align: center; height: 80%;">
 			<i class="fa fa-fw fa-instagram" "></i>
-			<i class="fa fa-fw fa-facebook"></i>
+			<i class=" fa fa-fw fa-facebook"></i>
 			<i class="fa fa-fw fa-youtube"></i>
 			<i class="fa fa-fw fa-twitter"></i>
 			<i class="fa fa-fw fa-github"></i>
 		</div>
 		<div style="text-align: center;">&copy;copywrite 2021</div>
-		
+
 	</div>
 
-	
-	  
+
+
 </body>
+
 </html>
