--- a/mtm6201/prototype/sitepages/contactus.html
+++ b/mtm6201/prototype/sitepages/contactus.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -7,11 +8,18 @@
 	<title>Contact Us</title>
 	<link rel="stylesheet" href="../css/contact_us.css">
 </head>
+
 <body>
+	<div class="navbar">
+		<a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
+		<a href="./sitepages/products.html"><i class="fa fa-fw fa-search"></i> Products </a>
+		<a href="./sitepages/contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
+		<a href="./sitepages/aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
+	</div>
 	<div class="container">
 		<div class="header">
-		  Contact US <br/>
-			  <div class="breadcrumb"> /<a href="./index.html"> Home </a> / About Us</div>
+			Contact US <br />
+			<div class="breadcrumb"> /<a href="./index.html"> Home </a> / About Us</div>
 		</div>
 		<div class="contact-us-section">
 			<div class="input-form-box">
@@ -25,13 +33,11 @@
 				</form>
 			</div>
 			<div class="illustration">
-				<img src="./Assets/Images/contact_us_.svg" width="100%"/>
+				<img src="./Assets/Images/contact_us_.svg" width="100%" />
 			</div>
 		</div>
-		
-	</div>	
+
+	</div>
 </body>
+
 </html>
-
-
-	
