header html updated

--- a/mtm6201/prototype/sitepages/aboutus.html
+++ b/mtm6201/prototype/sitepages/aboutus.html
@@ -5,16 +5,15 @@
 </head>
 
 <body>
-	<div class="navbar">
-		<a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-		<a href="./sitepages/products.html"><i class="fa fa-fw fa-search"></i> Products </a>
-		<a href="./sitepages/contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
-		<a href="./sitepages/aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
-	</div>
 	<div class="container">
 		<div class="header">
 			ABOUT US
-			<div class="breadcrumb"> /<a href="../index.html"> Home </a> / About Us</div>
+			<div class="navbar">
+				<a href="../index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+				<a href="./products.html"><i class="fa fa-fw fa-search"></i> Products </a>
+				<a href="./contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
+				<a class="active" href="./aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
+			</div>
 		</div>
 		<div class="info-box">
 			Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex praesentium alias dolorem. Omnis eveniet unde,
