--- a/mtm6201/prototype/sitepages/contactus.html
+++ b/mtm6201/prototype/sitepages/contactus.html
@@ -19,7 +19,12 @@
 	<div class="container">
 		<div class="header">
 			Contact US <br />
-			<div class="breadcrumb"> /<a href="./index.html"> Home </a> / About Us</div>
+			<div class="navbar">
+				<a href="../index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+				<a href="./products.html"><i class="fa fa-fw fa-search"></i> Products </a>
+				<a class="active" href="./contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
+				<a href="./aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
+			</div>
 		</div>
 		<div class="contact-us-section">
 			<div class="input-form-box">
