--- a/mtm6201/prototype/sitepages/products.html
+++ b/mtm6201/prototype/sitepages/products.html
@@ -5,19 +5,17 @@
 </head>
 
 <body>
-	<div class="navbar">
-		<a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-		<a href="./sitepages/products.html"><i class="fa fa-fw fa-search"></i> Products </a>
-		<a href="./sitepages/contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
-		<a href="./sitepages/aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
-	</div>
-
-
 	<div class="container">
 		<div class="header">
 			<h2>Products</h2>
-			<div class="breadcrumb"> /<a href="./index.html"> Home </a> / Products</div>
 		</div>
+		<div class="navbar">
+			<a href="../index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+			<a class="active" href="./products.html"><i class="fa fa-fw fa-search"></i> Products </a>
+			<a href="./contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
+			<a href="./aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
+		</div>
+	
 		<div class="products-list">
 			<div class="card">
 				<img src="https://images.pexels.com/photos/1752506/pexels-photo-1752506.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
