--- a/mtm6201/prototype/sitepages/contactus.html
+++ b/mtm6201/prototype/sitepages/contactus.html
@@ -10,12 +10,6 @@
 </head>
 
 <body>
-	<div class="navbar">
-		<a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-		<a href="./sitepages/products.html"><i class="fa fa-fw fa-search"></i> Products </a>
-		<a href="./sitepages/contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
-		<a href="./sitepages/aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
-	</div>
 	<div class="container">
 		<div class="header">
 			Contact US <br />
@@ -38,7 +32,7 @@
 				</form>
 			</div>
 			<div class="illustration">
-				<img src="./Assets/Images/contact_us_.svg" width="100%" />
+				<img src="../img/contact_us_.svg" width="100%" />
 			</div>
 		</div>
 
