--- a/mtm6201/prototype/index.html
+++ b/mtm6201/prototype/index.html
@@ -54,14 +54,14 @@
 	</div>
 
 	<div class="footer">
-		<div style="text-align: center; height: 80%;">
+		<div style="text-align: left">
 			<i class="fa fa-fw fa-instagram" "></i>
 			<i class=" fa fa-fw fa-facebook"></i>
 			<i class="fa fa-fw fa-youtube"></i>
 			<i class="fa fa-fw fa-twitter"></i>
 			<i class="fa fa-fw fa-github"></i>
 		</div>
-		<div style="text-align: center;">&copy;copywrite 2021</div>
+		<div style="text-align: right;">&copy;copywrite 2021</div>
 
 	</div>
 
