--- a/mtm6201/prototype/sitepages/products.html
+++ b/mtm6201/prototype/sitepages/products.html
@@ -28,7 +28,7 @@
 			<div class="card">
 				<img src="https://images.pexels.com/photos/5060292/pexels-photo-5060292.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
 					alt="vanilla corn" style="width:100%">
-				<h1>Vanilla corn</h1>
+				<h1>Vanilla cone</h1>
 				<p class="price">$19.99</p>
 				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo accusantium aspernatur labore
 					magnam, aut temporibus harum libero hic totam numquam.</p>
