--- a/mtm6201/prototype/sitepages/aboutus.html
+++ b/mtm6201/prototype/sitepages/aboutus.html
@@ -15,45 +15,40 @@
 				<a class="active" href="./aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
 			</div>
 		</div>
+		<div>
+			<h2>Our Story</h2>
+		</div>
 		<div class="info-box">
-			Lorem ipsum dolor sit amet consectetur adipisicing elit. Ex praesentium alias dolorem. Omnis eveniet unde,
-			esse porro laboriosam id. Architecto, inventore vel? Fuga voluptates sequi, facere doloremque deserunt quos
-			sed.
-			Ratione porro aspernatur blanditiis autem maiores voluptas, nostrum facere sed placeat totam in quis ullam
-			quo voluptatum perferendis molestiae ab deserunt alias. Nostrum repellendus adipisci perspiciatis fugiat
-			illum. Quis, facere!
-			Provident facilis laboriosam sit voluptas nemo eos in animi voluptatem temporibus, repellendus nostrum
-			ipsam, aliquam eius doloribus dolores. Ex molestias error recusandae est deleniti sit animi ad mollitia quia
-			repellat.
-			Ea repellendus eum labore aut autem quis, ipsam doloremque rem nam possimus odit similique corrupti a illum
-			repudiandae quae deserunt quas. Dolorum quisquam eius quibusdam harum tenetur nihil neque totam?
-			Nostrum architecto provident neque ratione laboriosam, obcaecati vitae. Consectetur, quasi dolores?
-			Doloribus, laborum! Quod quam, vero earum animi excepturi ipsum molestias adipisci praesentium tenetur
-			facere voluptas eaque ipsam blanditiis labore!
-			At voluptate saepe architecto error in harum, minima facere repellat odio neque alias deleniti corrupti
-			earum quaerat eligendi enim necessitatibus maiores ad iure praesentium magni dignissimos quis, veniam
-			aliquid! Itaque.
-			Velit nulla neque asperiores qui aspernatur dolorum minima doloremque fuga porro iste nihil ut fugit eveniet
-			tempore dicta laboriosam ea recusandae eos, quo ex vitae. Necessitatibus unde adipisci modi recusandae!
-			Molestiae nam dolorum id quod perferendis, laborum fugiat voluptates aliquam minus voluptatibus esse
-			delectus consectetur magnam autem nisi necessitatibus sint porro reiciendis illum harum libero deleniti iure
-			vel! Rem, quos!
-			Quasi, exeeriam vero. Officia tempore sequi eos nostrum! Illum optio ut dolorum repellendus, architecto
-			eveniet!
-			Ea sequi cupiditate dolores quam atque sit exercitationem quod facilis quaerat minus nobis officia corrupti
-			qui delectus minima magni doloribus voluptate, nemo iste dignissimos accusantium explicabo ad nesciunt
-			pariatur. Voluptatibus.
-			Eum culpa nobis id odit necessitatibus. Totam adipisci explicabo repellendus id laboriosam, dolore nihil sed
-			quod corrupti. Soluta nihil commodi, possimus pariatur officiis voluptatibus, maxime molestiae, natus illo
-			earum delectus?
-			Qui dolore, incidunt quaerat quo similique quisquam molestiae eius fugiat iusto, officia vel itaque ullam,
-			saepe amet harum aliquid atque laudantium. Laudantium amet, ea impedit eum aspernatur alias architecto
-			voluptate.
-			Rem accusamus sapiente dolorum aspernatur ab dolores, odio nulla reprehenderit molestias veritatis? Dicta
-			voluptates perspiciatis repudiandae fugit dolore sit fugiat quam, ex hic. In molestiae porro quos ipsam,
-			aliquam modi!
-			Quidem officiis ipsam magnam exercitationem est? Dignissimos ipsa minima numquam a nisi reprehenderit soluta
-			eveniet debitis quos ex architecto quo enim quis eius quae optio libero, omnis beatae aperiam ad!
+			<p>Lorem ipsum dolor sit amet, consectetur adipiscing elit. Integer nec odio. Praesent libero. Sed cursus
+				ante dapibus diam. Sed nisi. Nulla quis sem at nibh elementum imperdiet. Duis sagittis ipsum. Praesent
+				mauris. Fusce nec tellus sed augue semper porta. Mauris massa. Vestibulum lacinia arcu eget nulla. Class
+				aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Curabitur sodales
+				ligula in libero. </p>
+
+			<p>Sed dignissim lacinia nunc. Curabitur tortor. Pellentesque nibh. Aenean quam. In scelerisque sem at
+				dolor. Maecenas mattis. Sed convallis tristique sem. Proin ut ligula vel nunc egestas porttitor. Morbi
+				lectus risus, iaculis vel, suscipit quis, luctus non, massa. Fusce ac turpis quis ligula lacinia
+				aliquet. Mauris ipsum. Nulla metus metus, ullamcorper vel, tincidunt sed, euismod in, nibh. </p>
+
+			<p>Quisque volutpat condimentum velit. Class aptent taciti sociosqu ad litora torquent per conubia nostra,
+				per inceptos himenaeos. Nam nec ante. Sed lacinia, urna non tincidunt mattis, tortor neque adipiscing
+				diam, a cursus ipsum ante quis turpis. Nulla facilisi. Ut fringilla. Suspendisse potenti. Nunc feugiat
+				mi a tellus consequat imperdiet. Vestibulum sapien. Proin quam. Etiam ultrices. Suspendisse in justo eu
+				magna luctus suscipit. </p>
+
+			<p>Sed lectus. Integer euismod lacus luctus magna. Quisque cursus, metus vitae pharetra auctor, sem massa
+				mattis sem, at interdum magna augue eget diam. Vestibulum ante ipsum primis in faucibus orci luctus et
+				ultrices posuere cubilia Curae; Morbi lacinia molestie dui. Praesent blandit dolor. Sed non quam. In vel
+				mi sit amet augue congue elementum. Morbi in ipsum sit amet pede facilisis laoreet. Donec lacus nunc,
+				viverra nec, blandit vel, egestas et, augue. Vestibulum tincidunt malesuada tellus. Ut ultrices ultrices
+				enim. Curabitur sit amet mauris. Morbi in dui quis est pulvinar ullamcorper. </p>
+
+			<p>Nulla facilisi. Integer lacinia sollicitudin massa. Cras metus. Sed aliquet risus a tortor. Integer id
+				quam. Morbi mi. Quisque nisl felis, venenatis tristique, dignissim in, ultrices sit amet, augue. Proin
+				sodales libero eget ante. Nulla quam. Aenean laoreet. Vestibulum nisi lectus, commodo ac, facilisis ac,
+				ultricies eu, pede. Ut orci risus, accumsan porttitor, cursus quis, aliquet eget, justo. </p>
+
+
 		</div>
 
 	</div>
