--- a/mtm6201/prototype/index.html
+++ b/mtm6201/prototype/index.html
@@ -17,6 +17,7 @@
 		<a href="./sitepages/products.html"><i class="fa fa-fw fa-search"></i> Products </a>
 		<a href="./sitepages/contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
 		<a href="./sitepages/aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
+		<img src="./img/logo.png" alt="TRupti logo">
 	</div>
 	<div class="container">
 		<div class="image-box">
@@ -55,13 +56,13 @@
 
 	<div class="footer">
 		<div style="text-align: left">
-			<i class="fa fa-fw fa-instagram" "></i>
-			<i class=" fa fa-fw fa-facebook"></i>
-			<i class="fa fa-fw fa-youtube"></i>
-			<i class="fa fa-fw fa-twitter"></i>
-			<i class="fa fa-fw fa-github"></i>
+			<a href="#"><i class="fa fa-fw fa-instagram" "></i></a>
+			<a href="#"><i class=" fa fa-fw fa-facebook"></i></a>
+			<a href="#"><i class="fa fa-fw fa-youtube"></i></a>
+			<a href=""><i class="fa fa-fw fa-twitter"></i></a>
+			<a href=""><i class="fa fa-fw fa-github"></i></a>
 		</div>
-		<div style="text-align: right;">&copy;copywrite 2021</div>
+		<div style="text-align: right;">Suraj Sukhiya &copy;copywrite 2021</div>
 
 	</div>
 
