--- a/mtm6201/prototype/index.html
+++ b/mtm6201/prototype/index.html
@@ -12,6 +12,8 @@
 </head>
 
 <body>
+
+
 	<div class="navbar">
 		<a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
 		<a href="./sitepages/products.html"><i class="fa fa-fw fa-search"></i> Products </a>
@@ -19,55 +21,63 @@
 		<a href="./sitepages/aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
 		<img src="./img/logo.png" alt="TRupti logo">
 	</div>
-	<div class="container">
-		<div class="image-box">
-			<img src="./img/homeimg960.png" width="80%" height="80%" />
-		</div>
-		<div class="message-box">
-			<div class="header">Trupti Ice-Cream </div>
-			<img class="tagline" src="./img/tagline.jpg" width="150px" height="150px" />
-			<div class="shore-details">
-				Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque tempore illo possimus corporis modi,
-				laboriosam nulla facere exercitationem dolorum sunt ut, nostrum at a dicta explicabo rem dolores,
-				ducimus suscipit.
-				Aspernatur, molestias dolorem ab in corporis eveniet numquam recusandae similique qui mollitia.
-				Voluptatibus, reprehenderit quibusdam. Maxime enim asperiores at, totam illum sed et quibusdam
-				reiciendis, natus deserunt facere, iusto ex!
-				Aliquid doloremque quod porro suscipit nulla, fugiat explicabo aperiam numquam error adipisci nihil
-				asperiores! Est quo, doloremque ipsam odio doloribus nisi! Nihil aspernatur nam animi porro id, soluta
-				et consequatur!
-				Doloribus voluptatem quos maxime. Et alias quae aperiam unde quaerat aut quos dolorem ad nam, facere
-				quasi autem perferendis ullam tempore accusamus maxime dicta culpa itaque nesciunt consequuntur iusto
-				suscipit?
-				Minus vero accusantium sed, dignissimos sapiente dicta debitis voluptatibus harum. Qui cumque veritatis
-				repellendus officiis vero, deserunt saepe? Dicta, dolor. Est quisquam minima possimus quas ullam magnam
-				eum voluptates cupiditate?
-				Doloribus maiores, facere pariatur assumenda tenetur eum esse officiis quisquam dolor molestias quam
-				possimus omnis hic quia maxime aliquam similique consequatur est? Repellendus nesciunt nemo veniam quae
-				aperiam et. Cum.
-				Eum iusto tempore officia, nemo et ea corporis impedit est voluptate fugit itaque ratione unde facilis
-				perferendis explicabo optio, quam distinctio dolores obcaecati numquam ut eaque voluptas! Velit, nobis
-				recusandae.
-				<br>
-				<button type="submit">Order Now</button>
+	<main>
+		<div class="container">
+			<div class="image-box">
+				<img src="./img/homeimg960.png" alt="Ice-Cream">
+			</div>
+			<div class="message-box">
+				<div class="header">Trupti Ice-Cream </div>
+				<img class="tagline" src="./img/tagline.jpg"  alt="if not now then when?">
+				<div class="shore-details">
+					Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque tempore illo possimus corporis modi,
+					laboriosam nulla facere exercitationem dolorum sunt ut, nostrum at a dicta explicabo rem dolores,
+					ducimus suscipit.
+					Aspernatur, molestias dolorem ab in corporis eveniet numquam recusandae similique qui mollitia.
+					Voluptatibus, reprehenderit quibusdam. Maxime enim asperiores at, totam illum sed et quibusdam
+					reiciendis, natus deserunt facere, iusto ex!
+					Aliquid doloremque quod porro suscipit nulla, fugiat explicabo aperiam numquam error adipisci nihil
+					asperiores! Est quo, doloremque ipsam odio doloribus nisi! Nihil aspernatur nam animi porro id,
+					soluta
+					et consequatur!
+					Doloribus voluptatem quos maxime. Et alias quae aperiam unde quaerat aut quos dolorem ad nam, facere
+					quasi autem perferendis ullam tempore accusamus maxime dicta culpa itaque nesciunt consequuntur
+					iusto
+					suscipit?
+					Minus vero accusantium sed, dignissimos sapiente dicta debitis voluptatibus harum. Qui cumque
+					veritatis
+					repellendus officiis vero, deserunt saepe? Dicta, dolor. Est quisquam minima possimus quas ullam
+					magnam
+					eum voluptates cupiditate?
+					Doloribus maiores, facere pariatur assumenda tenetur eum esse officiis quisquam dolor molestias quam
+					possimus omnis hic quia maxime aliquam similique consequatur est? Repellendus nesciunt nemo veniam
+					quae
+					aperiam et. Cum.
+					Eum iusto tempore officia, nemo et ea corporis impedit est voluptate fugit itaque ratione unde
+					facilis
+					perferendis explicabo optio, quam distinctio dolores obcaecati numquam ut eaque voluptas! Velit,
+					nobis
+					recusandae.
+					<br>
+					<button type="submit">Order Now</button>
+				</div>
 			</div>
 		</div>
-	</div>
+	</main>
 
-	<div class="footer">
-		<div style="text-align: left">
-			<a href="#"><i class="fa fa-fw fa-instagram" "></i></a>
-			<a href="#"><i class=" fa fa-fw fa-facebook"></i></a>
-			<a href="#"><i class="fa fa-fw fa-youtube"></i></a>
-			<a href=""><i class="fa fa-fw fa-twitter"></i></a>
-			<a href=""><i class="fa fa-fw fa-github"></i></a>
+	<footer>
+		<div class="footer">
+			<div style="text-align: left">
+				<a href="#"><i class="fa fa-fw fa-instagram"></i></a>
+			<a href=" #"><i class=" fa fa-fw fa-facebook"></i></a>
+				<a href="#"><i class="fa fa-fw fa-youtube"></i></a>
+				<a href=""><i class="fa fa-fw fa-twitter"></i></a>
+				<a href=""><i class="fa fa-fw fa-github"></i></a>
+			</div>
+			<div style="text-align: right;">Trupit Ice-Cream &copy;copywrite 2021 <br> Designed by Suraj Sukhiya</div>
+
 		</div>
-		<div style="text-align: right;">Suraj Sukhiya &copy;copywrite 2021</div>
-
-	</div>
-
-
-
+	</footer>
 </body>
 
 </html>
