--- a/mtm6201/prototype/sitepages/contactus.html
+++ b/mtm6201/prototype/sitepages/contactus.html
@@ -11,19 +11,24 @@
 
 <body>
 	<div class="container">
-		<div class="header">
-			Contact US <br />
-			<div class="navbar">
-				<a href="../index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-				<a href="./products.html"><i class="fa fa-fw fa-search"></i> Products </a>
-				<a class="active" href="./contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
-				<a href="./aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
-			</div>
-		</div>
+
+		
+			<div class="header">
+				Contact US <br>
+				<div class="navbar">
+					<a href="../index.html"><i class="fa fa-fw fa-home"></i> Home</a>
+					<a class="active" href="./products.html"><i class="fa fa-fw fa-search"></i> Products </a>
+					<a href="./contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
+					<a href="./aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
+					<img src="../img/logo.png" alt="TRupti logo">
+				</div>
+		
+	</div>
+	<main>
 		<div class="contact-us-section">
 			<div class="input-form-box">
 				<h2>Fill Up The Details ⬇️</h2>
-				<form action="" method="post" style="width: 100%;">
+				<form action="c" method="post" style="width: 100%;">
 					<input type="text" name="firstname" id="firstname" placeholder="Firstname">
 					<input type="text" name="lastname" id="lastname" placeholder="Lastname">
 					<input type="text" name="email" id="email" placeholder="Your Email">
@@ -32,9 +37,15 @@
 				</form>
 			</div>
 			<div class="illustration">
-				<img src="../img/contact_us_.svg" width="100%" />
+				<img src="../img/contact_us_.svg" width="100%" alt="Contactus">
 			</div>
 		</div>
+	</main>
+	<footer>
+		<div class="footer">
+			<div style="text-align: right;">Trupit Ice-Cream &copy;copywrite 2021 <br> Designed by Suraj Sukhiya</div>
+		</div>
+	</footer>
 
 	</div>
 </body>
