--- a/mtm6201/prototype/sitepages/products.html
+++ b/mtm6201/prototype/sitepages/products.html
@@ -1,10 +1,12 @@
-<html>
+<html lang="en">
 
 <head>
 	<link rel="stylesheet" href="../css/products.css">
 </head>
 
 <body>
+
+
 	<div class="container">
 		<div class="header">
 			<h2>Products</h2>
@@ -14,53 +16,62 @@
 			<a class="active" href="./products.html"><i class="fa fa-fw fa-search"></i> Products </a>
 			<a href="./contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
 			<a href="./aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
-		</div>
-	
-		<div class="products-list">
-			<div class="card">
-				<img src="https://images.pexels.com/photos/1752506/pexels-photo-1752506.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-					alt="green ice cream" style="width:100%">
-				<h1>Tailored Jeans</h1>
-				<p class="price">$19.99</p>
-				<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis, pariatur!</p>
-				<p><button>Add to Cart</button></p>
-			</div>
-			<div class="card">
-				<img src="https://images.pexels.com/photos/5060292/pexels-photo-5060292.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-					alt="vanilla corn" style="width:100%">
-				<h1>Vanilla cone</h1>
-				<p class="price">$19.99</p>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo accusantium aspernatur labore
-					magnam, aut temporibus harum libero hic totam numquam.</p>
-				<p><button>Add to Cart</button></p>
-			</div>
-			<div class="card">
-				<img src="https://images.pexels.com/photos/5659302/pexels-photo-5659302.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-					alt="choco-vanilla scoop with waffel" style="width:100%">
-				<h1>Choco-vanilla scoop with waffel</h1>
-				<p class="price">$19.99</p>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ab.</p>
-				<p><button>Add to Cart</button></p>
-			</div>
-			<div class="card">
-				<img src="https://images.pexels.com/photos/108370/pexels-photo-108370.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-					alt="Vanilla corn with toppings" style="width:100%">
-				<h1>Vanilla corn with toppings</h1>
-				<p class="price">$19.99</p>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, totam?</p>
-				<p><button>Add to Cart</button></p>
-			</div>
-			<div class="card">
-				<img src="https://images.pexels.com/photos/749102/pexels-photo-749102.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
-					alt="Choco Candy" style="width:100%">
-				<h1>Choco Candy</h1>
-				<p class="price">$19.99</p>
-				<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit consequuntur omnis cumque.</p>
-				<p><button>Add to Cart</button></p>
-			</div>
+			<img src="../img/logo.png" alt="TRupti logo">
 		</div>
 
+		<main>
+			<div class="products-list">
+				<div class="card">
+					<img src="https://images.pexels.com/photos/1752506/pexels-photo-1752506.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+						alt="green ice cream" style="width:100%">
+					<h1>Tailored Jeans</h1>
+					<p class="price">$19.99</p>
+					<p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Veritatis, pariatur!</p>
+					<p><button>Add to Cart</button></p>
+				</div>
+				<div class="card">
+					<img src="https://images.pexels.com/photos/5060292/pexels-photo-5060292.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+						alt="vanilla corn" style="width:100%">
+					<h1>Vanilla cone</h1>
+					<p class="price">$19.99</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Explicabo accusantium aspernatur labore
+						magnam, aut temporibus harum libero hic totam numquam.</p>
+					<p><button>Add to Cart</button></p>
+				</div>
+				<div class="card">
+					<img src="https://images.pexels.com/photos/5659302/pexels-photo-5659302.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+						alt="choco-vanilla scoop with waffel" style="width:100%">
+					<h1>Choco-vanilla scoop with waffel</h1>
+					<p class="price">$19.99</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Porro, ab.</p>
+					<p><button>Add to Cart</button></p>
+				</div>
+				<div class="card">
+					<img src="https://images.pexels.com/photos/108370/pexels-photo-108370.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+						alt="Vanilla corn with toppings" style="width:100%">
+					<h1>Vanilla corn with toppings</h1>
+					<p class="price">$19.99</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. At, totam?</p>
+					<p><button>Add to Cart</button></p>
+				</div>
+				<div class="card">
+					<img src="https://images.pexels.com/photos/749102/pexels-photo-749102.jpeg?auto=compress&cs=tinysrgb&dpr=2&h=650&w=940"
+						alt="Choco Candy" style="width:100%">
+					<h1>Choco Candy</h1>
+					<p class="price">$19.99</p>
+					<p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Fugit consequuntur omnis cumque.</p>
+					<p><button>Add to Cart</button></p>
+				</div>
+			</div>
+
+
 	</div>
+	</main>
+	<footer>
+		<div class="footer">
+			<div style="text-align: right;">Trupit Ice-Cream &copy;copywrite 2021 <br> Designed by Suraj Sukhiya</div>
+		</div>
+	</footer>
 
 
 </body>
