product html no error

--- a/mtm6201/prototype/sitepages/aboutus.html
+++ b/mtm6201/prototype/sitepages/aboutus.html
@@ -1,9 +1,12 @@
+<!DOCTYPE html>
 <html lang="en">
-
 <head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../css/aboutus.css">
+	<title>About US</title>
 </head>
-
 <body>
 
 	<div class="container">
@@ -76,13 +79,6 @@
 		</main>
 		<footer>
 			<div class="footer">
-				<div style="text-align: left">
-					<a href="#"><i class="fa fa-fw fa-instagram" "></i></a>
-				<a href=" #"><i class=" fa fa-fw fa-facebook"></i></a>
-					<a href="#"><i class="fa fa-fw fa-youtube"></i></a>
-					<a href=""><i class="fa fa-fw fa-twitter"></i></a>
-					<a href=""><i class="fa fa-fw fa-github"></i></a>
-				</div>
 				<div style="text-align: right;">Trupit Ice-Cream &copy;copywrite 2021 <br> Designed by Suraj Sukhiya
 				</div>
 
