--- a/mtm6201/prototype/sitepages/contactus.html
+++ b/mtm6201/prototype/sitepages/contactus.html
@@ -37,7 +37,7 @@
 				</form>
 			</div>
 			<div class="illustration">
-				<img src="../img/contact_us_.svg" width="100%" alt="Contactus">
+				<img src="../img/contact_us_.svg" alt="Contactus">
 			</div>
 		</div>
 	</main>
