--- a/mtm6201/prototype/sitepages/products.html
+++ b/mtm6201/prototype/sitepages/products.html
@@ -1,7 +1,12 @@
+<!DOCTYPE html>
 <html lang="en">
 
 <head>
+	<meta charset="UTF-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="../css/products.css">
+	<title>Products</title>
 </head>
 
 <body>
@@ -64,9 +69,9 @@
 				</div>
 			</div>
 
-
+		</main>
 	</div>
-	</main>
+	
 	<footer>
 		<div class="footer">
 			<div style="text-align: right;">Trupit Ice-Cream &copy;copywrite 2021 <br> Designed by Suraj Sukhiya</div>
