social media icons added

--- a/mtm6201/prototype/index.html
+++ b/mtm6201/prototype/index.html
@@ -7,18 +7,16 @@
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<title>Ice-Cream Shop</title>
 	<link rel="stylesheet" href="./css/style.css">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-
 </head>
 
 <body>
 
 
 	<div class="navbar">
-		<a class="active" href="#"><i class="fa fa-fw fa-home"></i> Home</a>
-		<a href="./sitepages/products.html"><i class="fa fa-fw fa-search"></i> Products </a>
-		<a href="./sitepages/contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
-		<a href="./sitepages/aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
+		<a class="active" href="#"></i> Home</a>
+		<a href="./sitepages/products.html">Products </a>
+		<a href="./sitepages/contactus.html"> Contact Us</a>
+		<a href="./sitepages/aboutus.html"> About US</a>
 		<img src="./img/logo.png" alt="TRupti logo">
 	</div>
 	<main>
@@ -28,7 +26,7 @@
 			</div>
 			<div class="message-box">
 				<div class="header">Trupti Ice-Cream </div>
-				<img class="tagline" src="./img/tagline.jpg"  alt="if not now then when?">
+				<img class="tagline" src="./img/tagline.jpg" alt="if not now then when?">
 				<div class="shore-details">
 					Lorem ipsum dolor sit amet consectetur adipisicing elit. Itaque tempore illo possimus corporis modi,
 					laboriosam nulla facere exercitationem dolorum sunt ut, nostrum at a dicta explicabo rem dolores,
@@ -67,9 +65,10 @@
 
 	<footer>
 		<div class="footer">
+			<!-- Used i class for social media icon in the bottom of index page insted of -->
 			<div style="text-align: left">
 				<a href="#"><i class="fa fa-fw fa-instagram"></i></a>
-			<a href=" #"><i class=" fa fa-fw fa-facebook"></i></a>
+				<a href=" #"><i class=" fa fa-fw fa-facebook"></i></a>
 				<a href="#"><i class="fa fa-fw fa-youtube"></i></a>
 				<a href=""><i class="fa fa-fw fa-twitter"></i></a>
 				<a href=""><i class="fa fa-fw fa-github"></i></a>
