--- a/mtm6201/prototype/index.html
+++ b/mtm6201/prototype/index.html
@@ -67,11 +67,11 @@
 		<div class="footer">
 			<!-- Used i class for social media icon in the bottom of index page insted of -->
 			<div style="text-align: left">
-				<a href="#"><i class="fa fa-fw fa-instagram"></i></a>
-				<a href=" #"><i class=" fa fa-fw fa-facebook"></i></a>
-				<a href="#"><i class="fa fa-fw fa-youtube"></i></a>
-				<a href=""><i class="fa fa-fw fa-twitter"></i></a>
-				<a href=""><i class="fa fa-fw fa-github"></i></a>
+				<a href="#"><img src="./icons/facebook.svg" alt="facebook"></a>
+				<a href=" #"><img src="./icons/instagram.svg" alt="instagram"></a>
+				<a href="#"><img src="./icons/linkedin.svg" alt="twitter"></a>
+				<a href=""><img src="./icons/twitter.svg" alt="linkedin"></a>
+				<a href=""></a>
 			</div>
 			<div style="text-align: right;">Trupit Ice-Cream &copy;copywrite 2021 <br> Designed by Suraj Sukhiya</div>
 
