--- a/mtm6201/prototype/sitepages/aboutus.html
+++ b/mtm6201/prototype/sitepages/aboutus.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
 	<meta charset="UTF-8">
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,6 +9,7 @@
 
 	<title>About US</title>
 </head>
+
 <body>
 
 	<div class="container">
@@ -16,10 +18,11 @@
 		<div class="header">
 			ABOUT US
 			<div class="navbar">
-				<a href="../index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-				<a href="./products.html"><i class="fa fa-fw fa-search"></i> Products </a>
-				<a href="./contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
-				<a class="active" href="./aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
+				<a href="../index.html"> Home</a>
+				<a href="./products.html"> Products </a>
+				<a href="./contactus.html"> Contact Us</a>
+				<a class="active" href="./aboutus.html">About US</a>
+				<img src="../img/logo.png" alt="TRupti logo">
 			</div>
 
 		</div>
