--- a/mtm6201/prototype/sitepages/contactus.html
+++ b/mtm6201/prototype/sitepages/contactus.html
@@ -13,40 +13,40 @@
 <body>
 	<div class="container">
 
-		
-			<div class="header">
-				Contact US <br>
-				<div class="navbar">
-					<a href="../index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-					<a class="active" href="./products.html"><i class="fa fa-fw fa-search"></i> Products </a>
-					<a href="./contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
-					<a href="./aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
-					<img src="../img/logo.png" alt="TRupti logo">
+
+		<div class="header">
+			Contact US <br>
+			<div class="navbar">
+				<a href="../index.html"> Home</a>
+				<a href="./products.html"> Products </a>
+				<a class="active" href="./contactus.html"> Contact Us</a>
+				<a href="./aboutus.html">About US</a>
+				<img src="../img/logo.png" alt="TRupti logo">
+			</div>
+		</div>
+		<main>
+			<div class="contact-us-section">
+				<div class="input-form-box">
+					<h2>Fill Up The Details ⬇️</h2>
+					<form action="c" method="post" style="width: 100%;">
+						<input type="text" name="firstname" id="firstname" placeholder="Firstname">
+						<input type="text" name="lastname" id="lastname" placeholder="Lastname">
+						<input type="text" name="email" id="email" placeholder="Your Email">
+						<input type="text" name="question" id="question" placeholder="What's your question">
+						<button type="submit">Submit</button>
+					</form>
 				</div>
-		
-	</div>
-	<main>
-		<div class="contact-us-section">
-			<div class="input-form-box">
-				<h2>Fill Up The Details ⬇️</h2>
-				<form action="c" method="post" style="width: 100%;">
-					<input type="text" name="firstname" id="firstname" placeholder="Firstname">
-					<input type="text" name="lastname" id="lastname" placeholder="Lastname">
-					<input type="text" name="email" id="email" placeholder="Your Email">
-					<input type="text" name="question" id="question" placeholder="What's your question">
-					<button type="submit">Submit</button>
-				</form>
+				<div class="illustration">
+					<img src="../img/contact_us_.svg" alt="Contactus">
+				</div>
 			</div>
-			<div class="illustration">
-				<img src="../img/contact_us_.svg" alt="Contactus">
+		</main>
+		<footer>
+			<div class="footer">
+				<div style="text-align: right;">Trupit Ice-Cream &copy;copywrite 2021 <br> Designed by Suraj Sukhiya
+				</div>
 			</div>
-		</div>
-	</main>
-	<footer>
-		<div class="footer">
-			<div style="text-align: right;">Trupit Ice-Cream &copy;copywrite 2021 <br> Designed by Suraj Sukhiya</div>
-		</div>
-	</footer>
+		</footer>
 
 	</div>
 </body>
