--- a/mtm6201/prototype/sitepages/products.html
+++ b/mtm6201/prototype/sitepages/products.html
@@ -17,10 +17,10 @@
 			<h2>Products</h2>
 		</div>
 		<div class="navbar">
-			<a href="../index.html"><i class="fa fa-fw fa-home"></i> Home</a>
-			<a class="active" href="./products.html"><i class="fa fa-fw fa-search"></i> Products </a>
-			<a href="./contactus.html"><i class="fa fa-fw fa-envelope"></i> Contact Us</a>
-			<a href="./aboutus.html"><i class="fa fa-fw fa-user"></i> About US</a>
+			<a href="../index.html"> Home</a>
+			<a class="active" href="./products.html"> Products </a>
+			<a href="./contactus.html"> Contact Us</a>
+			<a href="./aboutus.html">About US</a>
 			<img src="../img/logo.png" alt="TRupti logo">
 		</div>
 
@@ -71,7 +71,7 @@
 
 		</main>
 	</div>
-	
+
 	<footer>
 		<div class="footer">
 			<div style="text-align: right;">Trupit Ice-Cream &copy;copywrite 2021 <br> Designed by Suraj Sukhiya</div>
