--- a/mtm6201/prototype/index.html
+++ b/mtm6201/prototype/index.html
@@ -56,7 +56,7 @@
 					perferendis explicabo optio, quam distinctio dolores obcaecati numquam ut eaque voluptas! Velit,
 					nobis
 					recusandae.
-					<br>
+					<br><br>
 					<button type="submit">Order Now</button>
 				</div>
 			</div>
@@ -65,7 +65,7 @@
 
 	<footer>
 		<div class="footer">
-			<!-- Used i class for social media icon in the bottom of index page insted of -->
+			<!-- SOcial media icond added for the company -->
 			<div style="text-align: left">
 				<a href="#"><img src="./icons/facebook.svg" alt="facebook"></a>
 				<a href=" #"><img src="./icons/instagram.svg" alt="instagram"></a>
