--- a/mtm6201/prototype/index.html
+++ b/mtm6201/prototype/index.html
@@ -13,7 +13,7 @@
 
 
 	<div class="navbar">
-		<a class="active" href="#"></i> Home</a>
+		<a class="active" href="#">Home</a>
 		<a href="./sitepages/products.html">Products </a>
 		<a href="./sitepages/contactus.html"> Contact Us</a>
 		<a href="./sitepages/aboutus.html"> About US</a>
