--- a/index.html
+++ b/index.html
@@ -11,8 +11,8 @@
         <nav>
             <ul>
                 <li><a href="index.html">Home</a></li>
-                <li><a href="portfolio.html">Portfolio</a></li>
-                <li><a href="skills.html">My Skills</a></li>
+                <li><a href="./mtm6201/portfolio/portfolio.html">Portfolio</a></li>
+                <li><a href="./mtm6201/portfolio/skills.html">My Skills</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
             </ul>
         </nav>
