--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <header>
         <nav>
             <ul>
-                <li><a href="index.html">Home</a></li>
+                <li><a href="./index.html">Home</a></li>
                 <li><a href="./mtm6201/portfolio/portfolio.html">Portfolio</a></li>
                 <li><a href="./mtm6201/portfolio/skills.html">My Skills</a></li>
                 <li><a href="contact.html">Contact Me</a></li>
