--- a/index.html
+++ b/index.html
@@ -4,34 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="/css/style.css">
     <title>Document</title>
 </head>
 <body>
     <header>
         <nav>
-            <ul>
-                <li><a href="./index.html">Home</a></li>
-                <li><a href="./mtm6201/portfolio/portfolio.html">Portfolio</a></li>
-                <li><a href="./mtm6201/portfolio/skills.html">My Skills</a></li>
-                <li><a href="contact.html">Contact Me</a></li>
+            <ul class="nav-list">
+                <li class="nav-item"><img src="/img/logo.png" alt="My logo" class="logoimg"></li>
+                <li class="nav-item"><a href="index.html">Home</a></li>
+                <li class="nav-item"><a href="portfolio.html">Portfolio</a></li>
+                <li class="nav-item"><a href="skills.html">My Skills</a></li>
+                <li class="nav-item"><a href="contact.html">Contact Me</a></li>
             </ul>
         </nav>
     </header>
     <main>
-        <section class="pictures">
-            <img src="" alt="">
-            <img src="" alt="">
-        </section>
-        <section class="about">
-            <h1>About Me</h1>
-            <h3>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ut itaque consectetur vero facilis dolore rerum delectus, eius culpa aspernatur, vitae rem ipsum placeat impedit, neque veniam mollitia ipsam molestias.</h3>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores at quisquam harum sunt fugit, aliquid corporis quidem assumenda suscipit, deserunt velit quam explicabo eum tenetur, quo modi ullam eaque veritatis!
-                Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque facere quis aliquam iste commodi rerum. Ratione molestias earum fugiat quae magni. Iusto vel inventore in accusamus aperiam ipsam sint quae!
-            </p>
+        <section class="home">
+            <section class="pictures">
+                <img src="/img/m1.jpg" alt="Work-1">
+                <img src="/img/m2.JPG" alt="Work-2">
+            </section>
+            <section class="about">
+                <h1>About Me</h1>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Omnis ut itaque consectetur vero facilis dolore rerum delectus, eius culpa aspernatur, vitae rem ipsum placeat impedit, neque veniam mollitia ipsam molestias.</p>
+                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Dolores at quisquam harum sunt fugit, aliquid corporis quidem assumenda suscipit, deserunt velit quam explicabo eum tenetur, quo modi ullam eaque veritatis!
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit. Atque facere quis aliquam iste commodi rerum. Ratione molestias earum fugiat quae magni. Iusto vel inventore in accusamus aperiam ipsam sint quae!
+                </p>
+            </section>
         </section>
     </main>
     <footer>
 
     </footer>
 </body>
-</html>
+</html> 
