--- a/mtm6201/bootstrap/conatctus.html
+++ b/mtm6201/bootstrap/conatctus.html
@@ -15,7 +15,6 @@
         <ul class="nav navbar-nav" > 
             <li><a class="navbar-brand" href="./index.html">Blackfox Jeans</a></li>
             <li><a class="nav-item" href="./index.html">Home</a></li>
-            <li><a class="nav-item" href="./aboutus.html">About US</a></li>
             <li><a class="active" class="nav-item" href="./conatctus.html">Contact Us</a></li>
             <li><a class="nav-item"
                 href="https://www.google.com/search?q=mls+trading+gujarat+india&rlz=1C1CHBF_enCA958CA958&biw=2560&bih=1232&sxsrf=ALeKk03vsq1gxafmO_5eelHLO0rdh6NARg%3A1627611983316&ei=T2MDYevFEqyk_QbH56GIDw&oq=mls+trading+gujarat+in&gs_lcp=Cgdnd3Mtd2l6EAMYATIFCCEQoAEyBQghEKABOgcIABBHELADOgQIABBDOgUIABCABDoGCAAQFhAeOgQIIRAVOgcIIRAKEKABSgQIQRgAUP4TWIRFYNdPaAFwAngAgAF7iAHOBpIBAzEuN5gBAKABAcgBCMABAQ&sclient=gws-wiz">Us
@@ -25,6 +24,50 @@
     </nav>
     <!-- ---------------------Main--------------------------------- -->
     <main>
+        <div class="container contact">
+            <div class="row">
+                <div class="col-md-3">
+                    <div class="contact-us-section">
+                        <h3>Contact Us</h3>
+                        <h4>Reach out to us if you have any doubts and feedback!!!!!!!!!!!!!</h4>
+                        <img src="./img/contactimg.jpg" class="img-thumbnail" alt="Contactus">
+                    </div>
+                </div>
+                <div class="col-md-9">
+                    <div class="contact-form">
+                        <div class="form-group">
+                            <label class="control-label col-sm-2" for="lname">Last Name:</label>
+                            <div class="col-sm-10">          
+                              <input type="text" class="form-control" id="lname" placeholder="Enter Last Name" name="lastname">
+                            </div>
+                          </div>
+                        <div class="form-group">
+                          <label class="control-label col-sm-2" for="fname">First Name:</label>
+                          <div class="col-sm-10">          
+                            <input type="text" class="form-control" id="fname" placeholder="Enter First Name" name="firstname">
+                          </div>
+                        </div>
+                        <div class="form-group">
+                          <label class="control-label col-sm-2" for="comment">Comment:</label>
+                          <div class="col-sm-10">
+                            <textarea class="form-control" rows="5" id="comment"></textarea>
+                          </div>
+                        </div>
+                        <div class="form-group">
+                            <label class="control-label col-sm-2" for="email">Email:</label>
+                            <div class="col-sm-10">
+                              <input type="email" class="form-control" id="email" placeholder="Enter email" name="email">
+                            </div>
+                          </div>
+                        <div class="form-group">        
+                          <div class="col-sm-offset-2 col-sm-10">
+                            <button type="submit" class="btn btn-default">Submit</button>
+                          </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
         
     </main>
     <!-- -------------------footer--------------------------------- -->
