--- a/mtm6201/bootstrap/index.html
+++ b/mtm6201/bootstrap/index.html
@@ -19,7 +19,6 @@
             <ul class="nav navbar-nav">
                 <li><a class="navbar-brand" href="#">Blackfox Jeans</a></li>
                 <li><a class="active" class="nav-item" href="./index.html">Home</a></li>
-                <li><a class="nav-item" href="./aboutus.html">About US</a></li>
                 <li><a class="nav-item" href="./conatctus.html">Contact Us</a></li>
                 <li><a class="nav-item"
                         href="https://www.google.com/search?q=mls+trading+gujarat+india&rlz=1C1CHBF_enCA958CA958&biw=2560&bih=1232&sxsrf=ALeKk03vsq1gxafmO_5eelHLO0rdh6NARg%3A1627611983316&ei=T2MDYevFEqyk_QbH56GIDw&oq=mls+trading+gujarat+in&gs_lcp=Cgdnd3Mtd2l6EAMYATIFCCEQoAEyBQghEKABOgcIABBHELADOgQIABBDOgUIABCABDoGCAAQFhAeOgQIIRAVOgcIIRAKEKABSgQIQRgAUP4TWIRFYNdPaAFwAngAgAF7iAHOBpIBAzEuN5gBAKABAcgBCMABAQ&sclient=gws-wiz">Us
@@ -30,9 +29,59 @@
     </nav>
     <!-- ---------------------Main--------------------------------- -->
     <main>
-        <div class="jumbotron">
-            <img src="./img/jeansb.png" class="img-fluid" alt="Responsive image">
-        </div>
+        <div class="container bootstrap snipets">
+            <h1 class="text-center text-muted">Welcome to our store</h1>
+            <div class="row flow-offset-1">
+              <div class="col-xs-6 col-md-4">
+                <div class="product tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p1.jpg" alt="p1"></a>
+                  <div class="caption">
+                    <h4><a href="#">Skinny jeans</a></h4>
+                    <span class="price sale">$20.99</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-6 col-md-4">
+                <div class="product tumbnail thumbnail-3" class="img-thumbnail"><a href="#"><img class="img-thumbnail" src="./img/p2.jpg" alt="p2"></a>
+                  <div class="caption">
+                    <h4><a href="#">Straight-leg jeans</a></h4>
+                    <span class="price sale">$20.99</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-6 col-md-4">
+                <div class="product tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p3.jpg" alt="p3"></a>
+                  <div class="caption">
+                    <h4><a href="#">Bell-bottom jeans</a></h4>
+                    <span class="price">$20.99</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-6 col-md-4">
+                <div class="product tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p4.jpg" alt="p4"></a>
+                  <div class="caption">
+                    <h4><a href="#">Wide-leg jeans</a></h4>
+                    <span class="price sale">$20.99</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-6 col-md-4">
+                <div class="product tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p5.jpg" alt="p5"></a>
+                  <div class="caption">
+                    <h4><a href="#">High-rise jeans</a></h4>
+                </span><span class="price sale">$20.99</span>
+                  </div>
+                </div>
+              </div>
+              <div class="col-xs-6 col-md-4">
+                <div class="product tumbnail thumbnail-3"><a href="#"><img class="img-thumbnail" src="./img/p6.jpg" alt="p6"></a>
+                  <div class="caption">
+                    <h4><a href="#">Mid-rise jeans</a></h4>
+                    <span class="price sale">$12.49</span>
+                  </div>
+                </div>
+              </div>
+            </div>
+          </div> -->
     </main>
     <!-- -------------------footer--------------------------------- -->
     <footer>
